<resources>
    <string name="app_name">FireTracker</string>
    <string name="title_activity_maps">Fire Map</string>
    <string name="report_local_fire">Report Local Fire</string>
    <string name="finished_placing_marker">Finished Placing Marker</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="about_this_project"><u><b>About This Project</b>‎‎</u>‏‏‎‎</string>
    <string name="developers_names"><u><b>Class</b></u>\nCOMP350: Software Engineering\nSection 1\n\n<u><b>Developers</b></u>\nAlex Hadland\nBen Tischhauser\nChris Miller\n\n<u><b>Awesome Professors</b></u>\nJason Isaacs\nNick Stern</string>
    <string name="next">Next</string>
    <string name="go_back">Go Back</string>
    <string name="fire_safety_tips"><u><b>Fire Safety Tips</b></u>\n<font size="10">(Provided by CalFire)</font></string>
    <string name="fire_tracker_credits">Fire Tracker Credits</string>
    <string name="about_this_project_menu"> About This Project </string>
    <string name="view_fire_safety_tips_menu"> View Fire Safety Tips </string>
    <string name="edit_marker">Edit Marker</string>
    <string name="enter_a_title_for_your_marker">Type a location for your fire marker</string>
    <string name="enter_a_description_for_your_fire_marker">Type a description for your fire marker</string>
    <string name="marker_description_label">Description:</string>
    <string name="marker_reported_label">Reported:</string>
    <string name="marker_location_label">Location:</string>
    <string name="marker_started_label">Started:</string>
    <string name="marker_burned_label">Acres Burned:</string>
    <string name="marker_contained_label">Contained:</string>
    <string name="marker_remove_button_label">Remove Marker</string>
    <string name="button_edit_marker_label">Edit Marker</string>
</resources>