<?xml version="1.0" encoding="utf-8"?>
<!-- This LinLayout needed to allow other elements than just the map fragment to be present (ex. button) -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        map:layout_constraintBottom_toTopOf="@+id/report"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="1.0"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/report_local_fire"
        android:visibility="visible"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/map" />

    <Button
        android:id="@+id/markerPlaced"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/finished_placing_marker"
        android:visibility="gone"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/map" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_button_text"
        map:backgroundTint="#E13434"
        map:layout_constraintStart_toStartOf="@+id/map"
        map:layout_constraintTop_toTopOf="@+id/map" />

</androidx.constraintlayout.widget.ConstraintLayout>