<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MarkerInfoFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/marker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@android:color/background_light"
        android:gravity="clip_horizontal|center_horizontal"
        android:textColor="@android:color/secondary_text_light"
        android:textStyle="bold" />

    <!-- Burned -->
    <LinearLayout
        android:id="@+id/marker_burned"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/marker_burned_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:lines="1"
            android:text="@string/marker_burned_label"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marker_burned_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="5dp"
            android:textColor="@android:color/secondary_text_light" />
    </LinearLayout>

    <!-- Started -->
    <LinearLayout
        android:id="@+id/marker_started"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/marker_started_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:lines="1"
            android:text="@string/marker_started_label"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marker_started_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="5dp"
            android:textColor="@android:color/secondary_text_light" />
    </LinearLayout>

    <!-- Contained -->
    <LinearLayout
        android:id="@+id/marker_contained"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/marker_contained_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:lines="1"
            android:text="@string/marker_contained_label"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marker_contained_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="5dp"
            android:textColor="@android:color/secondary_text_light" />
    </LinearLayout>

    <!-- Reported -->
    <LinearLayout
        android:id="@+id/marker_reported"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/marker_reported_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:lines="1"
            android:text="@string/marker_reported_label"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marker_reported_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="5dp"
            android:textColor="@android:color/secondary_text_light" />
    </LinearLayout>

    <!-- Location -->
    <LinearLayout
        android:id="@+id/marker_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/marker_location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/marker_location_label"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marker_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="20dp"
            android:textColor="@android:color/secondary_text_light" />
    </LinearLayout>

    <!-- Description -->
    <LinearLayout
        android:id="@+id/marker_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/marker_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/marker_description_label"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marker_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="20dp"
            android:textColor="@android:color/secondary_text_light" />
    </LinearLayout>

    <Button
        android:id="@+id/button_remove_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marker_remove_button_label"
        android:visibility="gone"
        app:backgroundTint="#EF2D3C" />

</LinearLayout>